--- a/Semana-04/CSS/aside.css
+++ b/Semana-04/CSS/aside.css
@@ -3,16 +3,14 @@
 }
 .vertical-menu {
     display: flex;
-    flex-direction: row;
     width: 20%;
     height: 1820px;
-    margin-top: 0%;
-    margin-left: 0%;
+    margin: 0%;
     padding: 10px;
-    background-image: linear-gradient(#50A780, white);
-    color: black; 
-    text-decoration: none; /* Remove underline from links */
-    line-height: 1.6em ; /*space between lines */
+    background-image: linear-gradient(#50A780, #fff);
+    color: #000000;
+    text-decoration: none;
+    line-height: 1.6em;
 }
 .nav {
     display: flex;
@@ -20,32 +18,31 @@
     justify-content: left;
 }
 .nav button {
-    margin: 12%;
-    margin-top: 34%;
-    padding: 2%;
-    padding-left: 5%;
-    padding-right: 5%;
+    margin: 34% 12%;
+    padding: 2% 5%;
     background-color: #49A37B;
     border-radius: 4px;
-    border-color: black;
+    border-color: #000000;
     border-width: 1.5px;
     font-weight: lighter;
     font-size: x-small;
     text-align: center;
 }
+.nav button a {
+    font-size: 14px;
+}
 .nav a {
-    padding-bottom: 30px;
     color:#000000;
     text-decoration: none;
-    border-bottom: white;
-    font-size: smaller;
+    border-bottom: #fff;
+    font-size: 18px;
     font-weight: bold;
 }
 .vertical-menu h2 {
     width: 83%;
     margin: 5px;
     padding-bottom: 10px;
-    font-size: normal;
+    font-size: 26px;
     font-weight: bold;
     border-bottom: 1px solid #ED2626;    
 }
@@ -59,12 +56,9 @@
 }
 .contact-p {
     padding: 5%;
-    font-size: x-small;
-    line-height: 1em;
 }
 .information {
-    padding: 8%;
-    padding-top: 45%;
+    padding: 45% 8%;
     font-size: x-small;   
 }
 .fa {
