--- a/Semana-04/CSS/header.css
+++ b/Semana-04/CSS/header.css
@@ -42,8 +42,8 @@ body {
     background: none;
     height: 30px;
     margin: 8px;
-    font-size: 20px;
     padding: 2px;
+    font-size: 20px;
 }
 .header-search {
     margin: 0;
@@ -54,9 +54,9 @@ body {
 }
 .header-search-form {
     display: flex;
-    padding: 1%;
     margin: 8px 0;
-    background-color: white;
+    padding: 1%;
+    background-color: #ffffff;
     border-radius: 18px;   
 }
 .header-search-form button {
@@ -64,12 +64,11 @@ body {
     width: 40px;
     border: none;
     cursor: pointer;
-    color: gray;
+    color: #808080;
 }
 .header-login, .header-sign-up {
     padding: 9px 0;
-    margin-right: 10px;
-    margin-top: 8px;
+    margin: 8px 10px 0px 0px;
     height: fit-content;
 }
 .header .header-login {
@@ -109,12 +108,6 @@ body {
     }
     .header-search {
         display: none;
-    }
-    .fa-search::before {
-        margin-left: 500px;
-    }
-    .login-signup-buttons {
-        margin-right: 230px;
     }
 }
 
