--- a/Semana-04/CSS/main.css
+++ b/Semana-04/CSS/main.css
@@ -61,7 +61,7 @@ body {
     width: 130px;
     height: 100px;
     box-sizing: border-box;
-    border: 1px solid gray;
+    border: 1px solid #808080;
     box-shadow: 0px 3px 12px 0px #000000;
 }
 .figcaption {
@@ -81,7 +81,7 @@ body {
     margin-top: 60px;
 }
 .lists h2 {
-    font-size: 28px;
+    font-size: 26px;
     font-weight: bold;
 }
 .lists li {
