BaSP-2022-W6: signup validations done

--- a/Semana-06/Styles/login.css
+++ b/Semana-06/Styles/login.css
@@ -90,5 +90,6 @@ body {
 .login-form-container .login-error-message {
     visibility: hidden;
     color: red;
-    font-size: 15px;
+    font-size: 13px;
+    margin-top: 3px;
 }
