--- a/Semana-06/views/login.html
+++ b/Semana-06/views/login.html
@@ -61,7 +61,7 @@
                         <input type="checkbox" id="remember-me">
                         <label> Remember me </label>
                     </div>
-                    <button class="forgot-pw-button">Forgot your password?</button>
+                    <button class="forgot-pw-button" onclick="forgotPasswordAlert()">Forgot your password?</button>
                 </form>  
             <div>
         </div>
