--- a/Semana-06/Styles/employee-signup.css
+++ b/Semana-06/Styles/employee-signup.css
@@ -52,5 +52,14 @@
 .signup-form-container .signup-error-message {
     visibility: hidden;
     color: red;
-    font-size: 15px;
+    font-size: 13px;
+    margin-top: 3px;
+}
+@media screen and (max-width: 768px){
+    .signup-form-container form{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 110%;
+    }
 }
