--- a/Semana-06/views/employee-signup.html
+++ b/Semana-06/views/employee-signup.html
@@ -61,13 +61,13 @@
                     <p class="signup-error-message signup-dni-error">The DNI has not a valid format.</p>
                     <p>Date of birth</p>
                     <input type="date" name="birth" placeholder="date of birth" onblur="dateBlur()" onfocus="dateFocus()">
-                    <p class="signup-error-message signup-date-error">The Date has not a valid date.</p>
+                    <p class="signup-error-message signup-date-error">The Date is not a valid date.</p>
                     <p>Telephone number</p>
                     <input type="text" name="telephone" placeholder="Write telephone number" onblur="telBlur()" onfocus="telFocus()">
                     <p class="signup-error-message signup-telephone-error">The phone has not a valid format.</p>
-                    <p>Adress</p>
-                    <input type="text" name="adress" placeholder="Write your adress" onblur="adressBlur()" onfocus="adressFocus()">
-                    <p class="signup-error-message signup-adress-error">The phone has not a valid format.</p>
+                    <p>Address</p>
+                    <input type="text" name="address" placeholder="Write your address" onblur="addressBlur()" onfocus="addressFocus()">
+                    <p class="signup-error-message signup-address-error">The address has not a valid format.</p>
                 </div>
                 <div class="right-column">
                     <p>City</p>
@@ -81,14 +81,14 @@
                     <p class="signup-error-message signup-email-error">The Email has not a valid format.</p>
                     <p>Password</p>
                     <input type="text" name="Password" placeholder="Write your Password" onblur="pwBlur()" onfocus="pwFocus()">
-                    <p class="signup-error-message signup-password-error">The Postal code has not a valid format.</p>
+                    <p class="signup-error-message signup-password-error">The Password has not a valid format.</p>
                     <p>Confirm password</p>
                     <input type="text" name="confirmation" placeholder="Write password again" onblur="confirmationBlur()" onfocus="confirmationFocus()">
                     <p class="signup-error-message signup-confirmation-error">Password must be the same.</p>   
                 </div>
             </form>
             <div class="signup-green-button">
-                <button>Sign up</button>
+                <button onclick="signup()">Sign up</button>
             </div>
         </div>
     </main>
