--- a/Semana-07/Styles/footer.css
+++ b/Semana-07/Styles/footer.css
@@ -36,7 +36,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-bottom: 6px;
     padding: 30px 0px 5px 0px;
+    width: max-content;
 }
 @media screen and (max-width: 1024px) {
     .horizontal-bottom-lists {
