--- a/Semana-07/views/employee-signup.html
+++ b/Semana-07/views/employee-signup.html
@@ -57,13 +57,13 @@
                     <input type="text" name="surname" placeholder="Write your surname" onblur="nameBlur('surname','signup-surname-error')" onfocus="nameFocus('signup-surname-error')">
                     <p class="signup-error-message signup-surname-error">The Surname has not a valid format.</p>
                     <p>DNI</p>
-                    <input type="text" name="dni" placeholder="DNI" onblur="dniBlur()" onfocus='dniFocus()'>
+                    <input type="number" name="dni" placeholder="DNI" onblur="dniBlur()" onfocus='dniFocus()'>
                     <p class="signup-error-message signup-dni-error">The DNI has not a valid format.</p>
                     <p>Date of birth</p>
                     <input type="date" name="birth" placeholder="date of birth" onblur="dateBlur()" onfocus="dateFocus()">
                     <p class="signup-error-message signup-date-error">The Date is not a valid date.</p>
                     <p>Telephone number</p>
-                    <input type="text" name="telephone" placeholder="Write telephone number" onblur="telBlur()" onfocus="telFocus()">
+                    <input type="number" name="telephone" placeholder="Write telephone number" onblur="telBlur()" onfocus="telFocus()">
                     <p class="signup-error-message signup-telephone-error">The phone has not a valid format.</p>
                     <p>Address</p>
                     <input type="text" name="address" placeholder="Write your address" onblur="addressBlur()" onfocus="addressFocus()">
@@ -74,16 +74,16 @@
                     <input type="text" name="city" placeholder="write your city" onblur="cityBlur()" onfocus="cityFocus()">
                     <p class="signup-error-message signup-city-error">The city is not a valid name.</p>
                     <p>Postal code</p>
-                    <input type="text" name="postal code" placeholder="write your postal code" onblur="codeBlur()" onfocus="codeFocus()"> 
+                    <input type="number" name="postal code" placeholder="write your postal code" onblur="codeBlur()" onfocus="codeFocus()"> 
                     <p class="signup-error-message signup-code-error">The Postal code has not a valid format.</p>
                     <p>Email</p>
-                    <input type="text" name="Email" placeholder="Write your Email" onblur="emailBlur()" onfocus="emailFocus()">
+                    <input type="email" name="Email" placeholder="Write your Email" onblur="emailBlur()" onfocus="emailFocus()">
                     <p class="signup-error-message signup-email-error">The Email has not a valid format.</p>
                     <p>Password</p>
-                    <input type="text" name="Password" placeholder="Write your Password" onblur="pwBlur()" onfocus="pwFocus()">
+                    <input type="password" name="Password" placeholder="Write your Password" onblur="pwBlur()" onfocus="pwFocus()">
                     <p class="signup-error-message signup-password-error">The Password has not a valid format.</p>
                     <p>Confirm password</p>
-                    <input type="text" name="confirmation" placeholder="Write password again" onblur="confirmationBlur()" onfocus="confirmationFocus()">
+                    <input type="password" name="confirmation" placeholder="Write password again" onblur="confirmationBlur()" onfocus="confirmationFocus()">
                     <p class="signup-error-message signup-confirmation-error">Password must be the same.</p>   
                 </div>
             </form>
