--- a/Semana-07/views/login.html
+++ b/Semana-07/views/login.html
@@ -66,7 +66,7 @@
             <div>
         </div>
         <div class="login-green-button">
-            <button onclick="login()">Login</button>
+            <button onclick="login()" id="btn">Login</button>
         </div>
     </main>
     <footer class="footer">
