BaSP-2022-W7: final commit

--- a/Semana-07/views/login.html
+++ b/Semana-07/views/login.html
@@ -49,10 +49,10 @@
             <h2>Log in</h2>
             <form action = " " method="POST">
                 <p>Email:</p>
-                <input type="text" name="Email" placeholder="Write your Email" onblur="emailBlur()" onfocus="emailFocus()">
+                <input type="email" name="Email" placeholder="Write your Email" onblur="emailBlur()" onfocus="emailFocus()">
                 <p class="login-error-message login-email-error">The email has not a format valid.</p>
                 <p>Password:</p>
-                <input type="text" name="Password" placeholder="Write your Password" onblur="passwordBlur()" onfocus="passwordFocus()">
+                <input type="password" name="Password" placeholder="Write your Password" onblur="passwordBlur()" onfocus="passwordFocus()">
                 <p class="login-error-message login-password-error">The password has to contain numbers and letters.</p>
             </form>
             </div class="form-footer">
